--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,6 +7,7 @@
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "JDBCPOSTGRES" 
+    "use_env_variable": "JDBCPOSTGRES",
+    "dialect": "postgres" 
   }
 }
