--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,7 +7,6 @@
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "JDBCPOSTGRES",
-    "dialect": "postgres" 
+    "use_env_variable": "JDBCPOSTGRES"
   }
 }
