--- a/server/config/config.json
+++ b/server/config/config.json
@@ -7,6 +7,9 @@
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "JDBCPOSTGRES"
+    "use_env_variable": "DATABASE_URL",
+    "ssl": {
+      "rejectUnauthorized": false
+    }
   }
 }
