--- a/server/config/config.json
+++ b/server/config/config.json
@@ -12,8 +12,8 @@
     "database": "d1gp0u36is4tg4",
     "host": "ec2-34-233-0-64.compute-1.amazonaws.com",
     "dialect": "postgres",
-    "dialectOptions": {
-      "ssl": true
+    "ssl": {
+      "rejectUnauthorized": false
     }
   }
 }
