--- a/server/config/config.json
+++ b/server/config/config.json
@@ -12,8 +12,6 @@
     "database": "d1gp0u36is4tg4",
     "host": "ec2-34-233-0-64.compute-1.amazonaws.com",
     "dialect": "postgres",
-    "ssl": {
-      "rejectUnauthorized": false
-    }
+    "ssl": true
   }
 }
